hphp/hack/test/typecheck/global_const4.php
<?hh

const mixed X = Vector{};
